--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,12 @@
             <artifactId>jersey-client</artifactId>
             <version>1.9.1</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-json -->
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-json</artifactId>
+            <version>1.19.4</version>
+        </dependency>
         <dependency>
             <groupId>javax.enterprise.concurrent</groupId>
             <artifactId>javax.enterprise.concurrent-api</artifactId>
